# mc-quadcopter

./: Cargo.toml  README.md
adafruit1893_driver/: Cargo.toml
adafruit1893_driver/src/: consts.rs  lib.rs
arduino_millis_driver/: Cargo.toml
arduino_millis_driver/src/: lib.rs
arduino_utils/: Cargo.toml
arduino_utils/src/: lib.rs
elinalgebra/: Cargo.toml
elinalgebra/src/: lib.rs  utils.rs  vector2.rs  vector3.rs
i2c_tools/: Cargo.toml
i2c_tools/src/: lib.rs
millis_driver/: Cargo.toml
millis_driver/src/: lib.rs
motor_driver/: Cargo.toml
motor_driver/src/: lib.rs
mpu6050_driver/: Cargo.toml
mpu6050_driver/src/: consts.rs  lib.rs  utils.rs
nRF24L01_driver/: Cargo.toml
nrf24_driver/: Cargo.toml
servo_driver/: Cargo.toml
servo_driver/src/: lib.rs
src/: controller.rs  drone.rs  main.rs  millis.rs  mpu6050.rs
src/controller/: inputs.rs  model.rs  mpu6050.rs
src/controller/inputs/: millis.rs  mpu6050.rs
