[package]
name = "drone"
version = "0.1.0"
authors = ["Callum Mackenzie <alexxander1611@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "drone"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
avr-device = "0.3.2"
micromath = "2.0.0"
nrf24-rs = "0.1"
nrf24_driver = { path = "nrf24_driver" } 
servo_driver = { path = "servo_driver" }
arduino_utils = { path = "arduino_utils" }
elinalgebra = { path = "elinalgebra" }
mpu6050_driver = { path = "mpu6050_driver" }
millis_driver = { path = "millis_driver" }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "392a32b770679cd216e7586d86a3c8ca252e6f64"
#########################################################
## WARNING: ENSURE THIS IS SYNCED ACROSS CARGO PROJETS ##
#########################################################
# features = ["arduino-nano"]
features = ["arduino-uno"]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
