[package]
name = "drone"
version = "0.1.0"
authors = ["Callum Mackenzie <alexxander1611@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "drone"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
cortex-m = "0.7.2"
embedded-hal = "0.2.3"
rp2040-hal = "0.8.0"
rp-pico = "0.7.0"
micromath = "2.0.0"
nrf24-rs = "0.1"
elinalgebra = { path = "elinalgebra" }
mpu6050_driver = { path = "mpu6050_driver" }

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
