[package]
name = "arduino_millis_driver"
version = "0.1.0"
authors = ["Callum Mackenzie <alexxander1611@gmail.com>"]
edition = "2018"

[dependencies]
ufmt = "0.1.0"
embedded-hal = "0.2.3"
avr-device = "0.3.2"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "f84c0dff774c2292bc932b670955165161ecc7d1"
#########################################################
## WARNING: ENSURE THIS IS SYNCED ACROSS CARGO PROJETS ##
#########################################################
# features = ["arduino-nano"]
features = ["arduino-uno"]