[package]
name = "arduino_millis_driver"
version = "0.1.0"
authors = ["Callum Mackenzie <alexxander1611@gmail.com>"]
edition = "2018"

[dependencies]
ufmt = "0.1.0"
embedded-hal = "0.2.3"
avr-device = "0.3.2"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "392a32b770679cd216e7586d86a3c8ca252e6f64"
#########################################################
## WARNING: ENSURE THIS IS SYNCED ACROSS CARGO PROJETS ##
#########################################################
# features = ["arduino-nano"]
features = ["arduino-uno"]